--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8080:80"
   minecraft:
-    image: itzg/minecraft-server
+    image: itzg/minecraft-server:java11
     ports:
       - "25565:25565"
     environment:
