YAY! THE MV WORLD DIR WORKS!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       VERSION: 1.16.5
       GAMEMODE: survival
       DIFFICULTY: normal
-      WORLD: "world"
+      EXTRA_ARGS: "--world-dir ./worlds/"
     volumes:
       - ./minecraft/server:/data
   discord:
