--- a/discord/Dockerfile
+++ b/discord/Dockerfile
@@ -1,7 +1,11 @@
 FROM node:alpine
 
 RUN apk add --no-cache git
-RUN mkdir /app
-RUN git clone https://github.com/skylerspaeth/LearSense.git /app
 
-CMD /bin/sh
+RUN mkdir /app
+WORKDIR /app
+
+RUN git clone https://github.com/skylerspaeth/LearSense.git .
+RUN npm install
+
+ENTRYPOINT cp $CRED_FILE config.json && node .
